--- a/app/src/main/res/layout/content_per_app_white_list.xml
+++ b/app/src/main/res/layout/content_per_app_white_list.xml
@@ -17,8 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="3dp"
         android:textColorHint="@color/colorAccent">
 
@@ -28,36 +28,77 @@
             android:id="@+id/edit_regex"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/white_list_regex_hint"
-            android:selectAllOnFocus="true"
-            android:inputType="text|textNoSuggestions|textMultiLine"
-            android:textSize="18sp"
-            android:imeOptions="actionDone"
-            android:gravity="start"
             android:backgroundTint="@color/colorAccent"
-            tools:text=".*文本.*"/>
+            android:gravity="start"
+            android:hint="@string/white_list_edit_regex_hint"
+            android:imeOptions="actionDone"
+            android:inputType="text|textNoSuggestions|textMultiLine"
+            android:maxLines="5"
+            android:selectAllOnFocus="true"
+            android:textColor="@color/colorSecondaryTextColor"
+            android:textSize="18sp"
+            android:typeface="monospace"
+            tools:text=".*Regex中文.*"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/test_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="3dp"
+        android:textColorHint="@color/colorAccent">
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/test_regex"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorAccent"
+            android:gravity="start"
+            android:hint="@string/white_list_edit_test_hint"
+            android:imeOptions="actionDone"
+            android:inputType="text|textNoSuggestions|textMultiLine"
+            android:maxLines="5"
+            android:selectAllOnFocus="true"
+            android:textColor="@color/colorSecondaryTextColor"
+            android:textSize="18sp"
+            android:typeface="monospace"
+            tools:text="测试文本"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_add"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
         android:layout_gravity="end"
-        android:layout_marginEnd="16dp"
-        android:text="@string/white_list_add_rule"
-        tools:text="Add"
-        android:backgroundTint="@color/colorAccent"
-        android:textColor="@android:color/white"/>
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="@android:color/white"
+        android:text="@string/white_list_btn_add_rule"
+        android:textColor="@color/colorAccent"/>
+    <!--style="?attr/borderlessButtonStyle"-->
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:textColor="@color/colorAccent"
-        android:text="@string/white_list_regex_list"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/white_list_regex_list"
+        android:textColor="@color/colorAccent"/>
+
+    <TextView
+        android:id="@+id/empty_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/white_list_regex_list_empty_hint"
+        android:visibility="visible"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/regex_list"
